// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`configures .npmrc content: 'corrects managed values and preserves…' 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    UPDATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures .npmrc content: 'creates a missing project configurati…' 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  Registry URL for package.json
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://p█│  https://pr█│  https://pro█│  https://prom█│  https://promp█│  https://prompt█│  https://prompte█│  https://prompted█│  https://prompted.█│  https://prompted.t█│  https://prompted.te█│  https://prompted.tes█│  https://prompted.test█│  https://prompted.test/█◇  Registry URL for package.json
│  https://prompted.test/
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    CREATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures .npmrc content: 'replaces a whitespace-only project re…' 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  Registry URL for package.json
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://p█│  https://pr█│  https://pro█│  https://prom█│  https://promp█│  https://prompt█│  https://prompte█│  https://prompted█│  https://prompted.█│  https://prompted.t█│  https://prompted.te█│  https://prompted.tes█│  https://prompted.test█│  https://prompted.test/█◇  Registry URL for package.json
│  https://prompted.test/
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    UPDATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures .npmrc content: 'treats a scoped registry as distinct …' 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  Registry URL for package.json
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://p█│  https://pr█│  https://pro█│  https://prom█│  https://promp█│  https://prompt█│  https://prompte█│  https://prompted█│  https://prompted.█│  https://prompted.t█│  https://prompted.te█│  https://prompted.tes█│  https://prompted.test█│  https://prompted.test/█◇  Registry URL for package.json
│  https://prompted.test/
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    UPDATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures .npmrc content: 'updates an empty project configuration' 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  Registry URL for package.json
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://p█│  https://pr█│  https://pro█│  https://prom█│  https://promp█│  https://prompt█│  https://prompte█│  https://prompted█│  https://prompted.█│  https://prompted.t█│  https://prompted.te█│  https://prompted.tes█│  https://prompted.test█│  https://prompted.test/█◇  Registry URL for package.json
│  https://prompted.test/
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    UPDATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures .npmrc content: 'uses npm\\'s effective final duplicate…' 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    UPDATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`prompts for a project registry despite an inherited 'environment registry' 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  Registry URL for package.json
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://p█│  https://pr█│  https://pro█│  https://prom█│  https://promp█│  https://prompt█│  https://prompte█│  https://prompted█│  https://prompted.█│  https://prompted.t█│  https://prompted.te█│  https://prompted.tes█│  https://prompted.test█│  https://prompted.test/█◇  Registry URL for package.json
│  https://prompted.test/
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    CREATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`prompts for a project registry despite an inherited 'global registry' 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  Registry URL for package.json
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://p█│  https://pr█│  https://pro█│  https://prom█│  https://promp█│  https://prompt█│  https://prompte█│  https://prompted█│  https://prompted.█│  https://prompted.t█│  https://prompted.te█│  https://prompted.tes█│  https://prompted.test█│  https://prompted.test/█◇  Registry URL for package.json
│  https://prompted.test/
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    CREATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`prompts for a project registry despite an inherited 'user registry' 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  Registry URL for package.json
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://p█│  https://pr█│  https://pro█│  https://prom█│  https://promp█│  https://prompt█│  https://prompte█│  https://prompted█│  https://prompted.█│  https://prompted.t█│  https://prompted.te█│  https://prompted.tes█│  https://prompted.test█│  https://prompted.test/█◇  Registry URL for package.json
│  https://prompted.test/
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    CREATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`updates only the 'nested package' adjacent .npmrc 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 2 package.json files.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ◻ packages/nested/package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ packages/nested/package.json◇  Which packages should be configured?
│  packages/nested/package.json
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  packages/nested/
│    UNCHANGED  package.json
│    UPDATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`updates only the 'standalone package' adjacent .npmrc 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◇  Configuration files are ready.
│
◆  Changed 2 files in 1 package
│
│  ./
│    UPDATED    package.json
│    UPDATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;

exports[`updates only the 'workspace member' adjacent .npmrc 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 2 package.json files.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ◻ packages/member/package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ packages/member/package.json◇  Which packages should be configured?
│  packages/member/package.json
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  packages/member/
│    UNCHANGED  package.json
│    UPDATED    .npmrc
│
└  Authentication configuration complete. 😊

"
`;
